--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
         "psr-4": {
             "CardGame\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7",
+        "squizlabs/php_codesniffer": "3.*"
     }
 }
